--- a/angular.json
+++ b/angular.json
@@ -23,8 +23,7 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "src/assets",
-                "output": "public"
+                "input": "public"
               }
             ],
             "styles": [
